ALCS-1163 on parcel owner creation dialog

--- a/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
@@ -102,6 +102,6 @@
 </div>
 <div mat-dialog-actions class="actions">
   <button mat-stroked-button (click)="onClose()">Cancel</button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid" *ngIf="!isEdit" (click)="onCreate()">Add</button>
-  <button mat-flat-button color="primary" [disabled]="form.invalid" *ngIf="isEdit" (click)="onSave()">Save</button>
+  <button mat-flat-button color="primary" *ngIf="!isEdit" (click)="onCreate()">Add</button>
+  <button mat-flat-button color="primary" *ngIf="isEdit" (click)="onSave()">Save</button>
 </div>
