Fix typos and cleanup

--- a/portal-frontend/src/app/features/applications/edit-submission/change-application-type-dialog/change-application-type-dialog.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/change-application-type-dialog/change-application-type-dialog.component.html
@@ -55,7 +55,7 @@
     </div>
 
     <ng-container *ngIf="stepIdx === prescribedBodyStep">
-      <app-presribed-body [value]="prescribedBody" (select)="onSelectPrescribedBody($event)"></app-presribed-body>
+      <app-prescribed-body [value]="prescribedBody" (select)="onSelectPrescribedBody($event)"></app-prescribed-body>
     </ng-container>
   </div>
 </div>
