--- a/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.html
+++ b/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.html
@@ -105,7 +105,7 @@
       </div>
     </ng-container>
     <ng-container *ngIf="currentStep === steps.prescribedBody">
-      <app-presribed-body (select)="onSelectPrescribedBody($event)"></app-presribed-body>
+      <app-prescribed-body (select)="onSelectPrescribedBody($event)"></app-prescribed-body>
     </ng-container>
     <ng-container *ngIf="currentStep === steps.srwType">
       <div class="step-description">
