alcs-1166 next button scroll fix

--- a/portal-frontend/src/app/app.component.html
+++ b/portal-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="site-layout">
+<div class="site-layout" id="siteLayout">
   <app-header *ngIf="showHeaderFooter"></app-header>
   <div id="appBody" class="main-content">
     <router-outlet></router-outlet>
