--- a/portal-frontend/src/app/features/public/notice-of-intent/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/alc-review/alc-review.component.html
@@ -4,6 +4,6 @@
   </div>
   <div>
     <app-public-decisions [decisions]="decisions"></app-public-decisions>
-    <app-submission-documents [documents]="documents"></app-submission-documents>
+    <app-submission-documents [submission]="submission" [documents]="documents"></app-submission-documents>
   </div>
 </div>
