--- a/portal-frontend/src/app/features/public/notification/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/public/notification/alc-review/alc-review.component.html
@@ -3,6 +3,6 @@
     <h3>ALC Review and Decision</h3>
   </div>
   <div>
-    <app-submission-documents [documents]="documents"></app-submission-documents>
+    <app-submission-documents [submission]="submission" [documents]="documents"></app-submission-documents>
   </div>
 </div>
