--- a/portal-frontend/src/app/features/public/search/notification-search-table/notification-search-table.component.html
+++ b/portal-frontend/src/app/features/public/search/notification-search-table/notification-search-table.component.html
@@ -4,7 +4,7 @@
     [dataSource]="dataSource"
     class="mat-elevation-z2 table"
     matSort
-    matSortActive="dateSubmitted"
+    matSortActive="lastUpdate"
     matSortDirection="desc"
     matSortDisableClear
   >
