bugfix alcs-1191 confirm email autocomplete fix

--- a/portal-frontend/src/app/features/notifications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/primary-contact/primary-contact.component.html
@@ -82,6 +82,7 @@
               matInput
               placeholder="Enter Email"
               formControlName="confirmEmail"
+              autocomplete="off"
             />
           </mat-form-field>
           <div *ngIf="confirmEmail.invalid && (confirmEmail.dirty || confirmEmail.touched)" class="field-error">
