--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.scss
@@ -1,5 +1,19 @@
 @use '../../../../../styles/functions' as *;
 
+.parcel-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: rem(12);
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    flex-wrap: wrap;
+    column-gap: rem(12);
+    row-gap: rem(12);
+    margin-bottom: unset;
+  }
+}
+
 .owner-information {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -14,26 +28,6 @@
 
 .crown-owner-information {
   grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-.review-table {
-  .full-width {
-    grid-column: 1/3;
-  }
-
-  .edit-button {
-    grid-column: 1/3;
-  }
-
-  @media screen and (min-width: $tabletBreakpoint) {
-    .full-width {
-      grid-column: 1/5;
-    }
-
-    .edit-button {
-      grid-column: 1/5;
-    }
-  }
 }
 
 .crown-land {
