Update table review responsive views

--- a/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.scss
@@ -16,10 +16,14 @@
 
 .owner-information {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: max-content max-content max-content max-content max-content;
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
 
   .full-width {
     grid-column: 1/3;
@@ -27,7 +31,11 @@
 }
 
 .crown-owner-information {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: max-content max-content max-content max-content;
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 .crown-land {
