--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.scss
@@ -60,10 +60,14 @@
 
   .other-attachments {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
 
     .full-width {
       grid-column: 1/3;
@@ -72,10 +76,14 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: 0.65fr 1fr 1fr;
+    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      grid-template-columns: 0.65fr 1fr 1fr;
+    }
 
     .full-width {
       grid-column: 1/4;
