--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
@@ -68,10 +68,14 @@
 
   .other-attachments {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
 
     .full-width {
       grid-column: 1/3;
@@ -80,10 +84,14 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: 0.65fr 1fr 1fr;
+    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      grid-template-columns: 0.65fr 1fr 1fr;
+    }
 
     .full-width {
       grid-column: 1/4;
@@ -95,7 +103,7 @@
     margin: rem(12) 0 rem(20) 0;
     background-color: colors.$grey-light;
     display: grid;
-    grid-row-gap: rem(24);
+    grid-row-gap: rem(4);
     grid-column-gap: rem(16);
     grid-template-columns: 1fr;
     word-wrap: break-word;
@@ -114,6 +122,10 @@
       }
     }
 
+    .grid-double {
+      margin-bottom: rem(16);
+    }
+
     .subheading2 {
       margin-bottom: rem(4) !important;
     }
@@ -122,6 +134,7 @@
       padding: rem(16);
       margin: rem(24) 0 rem(40) 0;
       grid-template-columns: minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr);
+      grid-row-gap: rem(24);
 
       .full-width {
         grid-column: 1/5;
@@ -129,6 +142,7 @@
 
       .grid-double {
         grid-column: 2/5;
+        margin-bottom: unset;
       }
 
       .grid-1 {
