--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/parcel/parcel.component.scss
@@ -1,11 +1,29 @@
 @use '../../../../../styles/functions' as *;
 
+.parcel-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: rem(12);
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    flex-wrap: wrap;
+    column-gap: rem(12);
+    row-gap: rem(12);
+    margin-bottom: unset;
+  }
+}
+
 .owner-information {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: max-content max-content max-content max-content max-content;
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
 
   .full-width {
     grid-column: 1/3;
@@ -13,26 +31,10 @@
 }
 
 .crown-owner-information {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-.review-table {
-  .full-width {
-    grid-column: 1/3;
-  }
-
-  .edit-button {
-    grid-column: 1/3;
-  }
+  grid-template-columns: max-content max-content max-content max-content;
 
   @media screen and (min-width: $tabletBreakpoint) {
-    .full-width {
-      grid-column: 1/5;
-    }
-
-    .edit-button {
-      grid-column: 1/5;
-    }
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
