--- a/portal-frontend/src/app/features/home/inbox/inbox-list/inbox-list.component.scss
+++ b/portal-frontend/src/app/features/home/inbox/inbox-list/inbox-list.component.scss
@@ -1,5 +1,5 @@
-@use '../../../../styles/functions' as *;
-@use '../../../../styles/colors';
+@use '../../../../../styles/functions' as *;
+@use '../../../../../styles/colors';
 
 .result-list {
   margin-top: rem(16);
