--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='!isMobile' class="table-wrapper">
+<div class="table-wrapper">
   <div class="table-container">
     <table mat-table [dataSource]="dataSource">
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -6,11 +6,11 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="no-data" colspan="7">No Notifications Created</td>
+        <td class="no-data" colspan="7">No {{ type }} Created</td>
       </tr>
 
       <ng-container matColumnDef="fileNumber">
-        <th mat-header-cell *matHeaderCellDef>Notification ID</th>
+        <th mat-header-cell *matHeaderCellDef>Application ID</th>
         <td mat-cell *matCellDef="let row">{{ row.fileNumber }}</td>
       </ng-container>
 
@@ -20,12 +20,12 @@
       </ng-container>
 
       <ng-container matColumnDef="applicant">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.applicant || '(Unknown)' }}</td>
+        <th mat-header-cell *matHeaderCellDef>Owner Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.ownerName || '(Unknown)' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="applicationType">
-        <th mat-header-cell *matHeaderCellDef>Type</th>
+        <th mat-header-cell *matHeaderCellDef>Application Type</th>
         <td mat-cell *matCellDef="let row">{{ row.type }}</td>
       </ng-container>
 
@@ -33,30 +33,32 @@
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let row">
           <div
-            *ngIf="row.status"
             class="label"
-            [style]="{ 'background-color': row.status.portalBackgroundColor, color: row.status.portalColor }"
+            [style]="{ 'background-color': row.statusType.portalBackgroundColor, color: row.statusType.portalColor }"
           >
-            {{ row.status.label }}
+            {{ row.statusType.label }}
           </div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="lastUpdated">
         <th mat-header-cell *matHeaderCellDef>Last Updated</th>
-        <td mat-cell *matCellDef="let row">{{ row.updatedAt | date }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.lastUpdate | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button [routerLink]="'/notification/' + row.fileNumber" *ngIf="row.canView" mat-flat-button color="primary">
-            View
-          </button>
+          <button [routerLink]="row.routerLink" *ngIf="row.routerLink" mat-flat-button color="primary">View</button>
         </td>
       </ng-container>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of SRWs"></mat-paginator>
+    <mat-paginator
+      [length]="_totalCount"
+      [pageSize]='10'
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      (page)="onPageChange($event)"
+      aria-label="Select page of applications"
+    ></mat-paginator>
   </div>
 </div>
-<app-inbox-list *ngIf="isMobile" [items]="listItems"></app-inbox-list>
