Code Review Feedback

--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
@@ -58,7 +58,7 @@
       [pageSize]='10'
       [pageSizeOptions]="[5, 10, 25, 100]"
       (page)="onPageChange($event)"
-      aria-label="Select page of applications"
+      aria-label="Select page"
     ></mat-paginator>
   </div>
 </div>
