--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
@@ -10,7 +10,7 @@
       </tr>
 
       <ng-container matColumnDef="fileNumber">
-        <th mat-header-cell *matHeaderCellDef>Application ID</th>
+        <th mat-header-cell *matHeaderCellDef>{{ type }} ID</th>
         <td mat-cell *matCellDef="let row">{{ row.fileNumber }}</td>
       </ng-container>
 
@@ -55,7 +55,7 @@
     </table>
     <mat-paginator
       [length]="_totalCount"
-      [pageSize]='10'
+      [pageSize]="10"
       [pageSizeOptions]="[5, 10, 25, 100]"
       (page)="onPageChange($event)"
       aria-label="Select page"
