Public View Fixes
* Fix spacing of soil table
* Remove "Parcel Information" heading
* Remove Parcel SCSS so it spaces the same as other tables

--- a/portal-frontend/src/app/features/notifications/notification-details/proposal-details/proposal-details.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/proposal-details/proposal-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="_notificationSubmission" class="review-table other-layout">
+<div *ngIf="_notificationSubmission" class="review-table">
   <div class="subheading2 grid-1">Submitter’s File Number</div>
   <div class="grid-double">
     {{ _notificationSubmission.submittersFileNumber }}
