--- a/portal-frontend/src/app/features/public/notification/submission/proposal-details/proposal-details.component.html
+++ b/portal-frontend/src/app/features/public/notification/submission/proposal-details/proposal-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="submission" class="review-table other-layout">
+<div *ngIf="submission" class="review-table">
   <div class="subheading2 grid-1">Submitter’s File Number</div>
   <div class="grid-double">
     {{ submission.submittersFileNumber }}
