bugfix error on corporate summary file upload

--- a/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
@@ -41,7 +41,7 @@
           (deleteFile)="removeCorporateSummary()"
           (openFile)="openCorporateSummary()"
           id="fileUpload"
-          [showErrors]="false"
+          [showErrors]="showFileErrors"
           [isRequired]="true"
         ></app-file-drag-drop>
         <mat-form-field style="display: none">
